Bump au.com.dius.pact from 4.1.7 to 4.2.13
Bumps au.com.dius.pact from 4.1.7 to 4.2.13.

---
updated-dependencies:
- dependency-name: au.com.dius.pact
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>