@@ -20,7 +20,7 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.31.0'
   id 'org.sonarqube' version '3.2.0'
   id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.22'
-  id 'au.com.dius.pact' version '4.1.7' //do not change this version or serenity reports will fail to generate
+  id 'au.com.dius.pact' version '4.2.13' //do not change this version or serenity reports will fail to generate
 
 }
 
@@ -191,6 +191,12 @@ task runProviderPactVerification(type: Test) {
   classpath = sourceSets.contractTest.runtimeClasspath
   systemProperty 'pact.verifier.publishResults', System.getProperty('pact.verifier.publishResults')
   systemProperty 'pact.provider.version', project.pacticipantVersion
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 runProviderPactVerification.dependsOn contract
@@ -427,6 +433,7 @@ dependencies {
   testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
   testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
   testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
   smokeTestCompile group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   smokeTestCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
